# dataknobs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .project_vars  .pylintrc  .pypirc.template  LICENSE  MIGRATION_PLAN.md  README.md  RELEASE_NOTES.md  conftest.py  data.json  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  run_api.sh  setup-dk.sh  tox.ini  uv.toml
.claude/: CLAUDE.md  settings.json
.claude/projects/-Users-spence-dev-work-kbs-labs-dataknobs/memory/: feedback_validation_command.md
.claude/rules/: async-transport.md  code-validation.md  consumer-extensibility.md  dataknobs-first.md  dependency-management.md  dual-docs.md  release-process.md  security.md
.dataknobs/: INTEGRATION_SUMMARY.md  README.md  docs-mirror-manifest.json  example-dynamic-workflow.yml  packages.json
.github/: GITHUB_PAGES_SETUP.md  QUALITY_VALIDATION_DESIGN.md  dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  docs-mirror-check.yml  docs-version-check.yml  docs.yml  integration-tests.yml  quality-validation.yml  release.yml
.quality-artifacts/: coverage-integration.xml  coverage-unit.xml  coverage.xml  environment.json  integration-test-results.xml  lint-report.json  quality-summary.json  signature.sha256  style-check.json  unit-test-results.xml
_testing_output/: pylint_output.txt  pytest_output.txt
dataknobs/: __init__.py  flask_api.py
dataknobs/structures/: document.py  record_store.py  tree.py
dataknobs/utils/: elasticsearch_utils.py  embedding_utils.py  file_utils.py  huggingface_utils.py  json_extractor.py  json_paths.py  json_utils.py  llm_utils.py  pandas_utils.py  path_sorter.py  requests_utils.py  sql_utils.py  stanza_utils.py  stats_utils.py  subprocess_utils.py  sys_utils.py  wordnet_utils.py  xml_utils.py
dataknobs/xization/: 0.readme.txt  annotations.py  annotations.py.000  annotations.py.001  authorities.py  lexicon.py  lexicon.py.WIP  masking_tokenizer.py
docker/: Dockerfile.dev  Dockerfile.prod  README.md
dockerdev/: Dockerfile
docs/: DEPRECATION_TIMELINE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  README.md  TODO_DOCUMENTATION.md  changelog.md  getting-started.md  index.md  installation.md  license.md  migration-guide.md
docs/api/: complete-reference.md  dataknobs-bots.md  dataknobs-common.md  dataknobs-config.md  dataknobs-data.md  dataknobs-fsm.md  dataknobs-llm.md  dataknobs-structures.md  dataknobs-utils.md  dataknobs-xization.md  index.md
docs/api/reference/: bots.md  common.md  config.md  data.md  fsm.md  llm.md  structures.md  utils.md  xization.md
docs/development/: adding-config-support.md  architecture.md  ci-cd.md  configuration-system.md  contributing.md  dependency-updates.md  dk-command.md  documentation-guide.md  environment-variables.md  index.md  integration-testing-ci.md  linting-configuration.md  linux-setup.md  mypy-configuration.md  new-package-checklist.md  python-compatibility.md  quality-checks.md  release-process.md  testing-guide.md  testing.md  uv-environment.md
docs/examples/: basic-tree.md  configuration.md  data-backends.md  data-migration.md  data-validation.md  database-config.md  document-processing.md  elasticsearch-integration.md  factory-pattern.md  index.md  markdown-chunking.md  multi-environment.md  pandas-workflow.md  s3-storage.md  sensor-dashboard.md  service-config.md  text-normalization.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/user-guide/: advanced-usage.md  basic-usage.md  best-practices.md  index.md  quickstart.md
notebooks/exploration/: elasticsearch_exploration.ipynb  elasticsearch_exploration.py  postgres_exploration.ipynb  postgres_exploration.py  stanza_exploration.ipynb  stanza_exploration.py  wordnet_exploration.ipynb
notebooks/nb/: utils.ipynb  utils.py
notebooks/util/: nbloader.py  service_utils.py  widget_utils.py
src/dataknobs_workspace/: __init__.py
tests/: conftest.py  test_docs_mirror_check.py
tests/integration/: test_package_interop.py
tests/structures/: test_conditional_dict.py  test_document.py  test_record_store.py  test_tree.py
tests/unit/bots/: test_wizard_reasoning.py
tests/utils/: test_elasticsearch_utils.py  test_file_utils.py  test_json_extractor.py  test_json_utils.py  test_llm_utils.py  test_pandas_utils.py  test_requests_utils.py  test_resource_utils.py  test_stats_utils.py  test_xml_utils.py
tests/utils/resources/: test-003.json
tests/xization/: test_authorities.py  test_masking_tokenizer.py  test_normalize.py
