[project]
name = "dataknobs-workspace"
version = "0.0.14"
description = "Dataknobs monorepo workspace"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pylint>=3.3.6",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/structures", 
    "packages/utils",
    "packages/xization",
    "packages/legacy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"